gccida/g0/process_options
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_options/src/toplev.c:5370:22: error: use of undeclared identifier 'sep'
user_label_prefix = &sep; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_options/src/toplev.c:5376:7: error: use of undeclared identifier 'sep'
v1 = &sep; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_options/src/toplev.c:5386:7: error: use of undeclared identifier 'sep'
v0 = &sep; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_options/src/toplev.c:5392:25: error: use of undeclared identifier 'sep'
print_version( stderr, &sep); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_options/src/toplev.c:5394:38: error: use of undeclared identifier 'sep'
print_switch_values( stderr, 0, 75, &sep, " ", "\n"); 
                                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_options/src/obj/toplev.o] Error 1
